# whispr-codex

./: .gitignore  AGENTS.md  README.md  nonexistent-config.toml  pyproject.toml
.context/agents/: architect-specialist.md  backend-specialist.md  bug-fixer.md  code-reviewer.md  database-specialist.md  devops-specialist.md  documentation-writer.md  feature-developer.md  frontend-specialist.md  mobile-specialist.md  performance-optimizer.md  refactoring-specialist.md  security-auditor.md  test-writer.md
.context/docs/: README.md  architecture.md  data-flow.md  development-workflow.md  glossary.md  project-overview.md  security.md  testing-strategy.md  tooling.md
.context/harness/: policy.json  sensors.json
.context/skills/: README.md
.context/skills/api-design/: SKILL.md
.context/skills/bug-investigation/: SKILL.md
.context/skills/code-review/: SKILL.md
.context/skills/commit-message/: SKILL.md
.context/skills/documentation/: SKILL.md
.context/skills/feature-breakdown/: SKILL.md
.context/skills/pr-review/: SKILL.md
.context/skills/refactoring/: SKILL.md
.context/skills/security-audit/: SKILL.md
.context/skills/test-generation/: SKILL.md
docs/: windows-setup.md
scripts/: bootstrap-whispercpp.ps1  build-portable.ps1
src/whispr/: __main__.py  app.py  audio.py  cli.py  config.py  diagnostics.py  engine.py  hotkey.py  injector.py  overlay.py  stabilization.py  telegram.py
tests/: test_app.py  test_config.py  test_engine.py  test_injector.py  test_stabilization.py  test_telegram.py
